# plutarch-ctl-bridge

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  flake-module.nix  flake.nix  plutarch-ctl-bridge.cabal
ctl-types-template/: .gitignore  .tidyrc.json  README.md  package-lock.json  package.json  packages.dhall  spago-packages.nix  spago.dhall
example/: Main.hs
src/Language/PureScript/: Bridge.hs
src/Language/PureScript/Bridge/: Builder.hs  CtlImports.hs  PSTypes.hs  Primitives.hs  Printer.hs  Script.hs  SumType.hs  Tuple.hs  TypeInfo.hs  TypeParameters.hs
